--- a/article/references.bib
+++ b/article/references.bib
@@ -512,3 +512,23 @@
   year={1909},
   publisher={Methuen \& Company}
 }
+
+@article{kolmogorov1933,
+  title={Sulla determinazione empirica di una legge didistribuzione},
+  author={An, Kolmogorov},
+  journal={Giorn Dell'inst Ital Degli Att},
+  volume={4},
+  pages={89--91},
+  year={1933}
+}
+
+@article{smirnov1939,
+  title={On the estimation of the discrepancy between empirical curves of distribution for two independent samples},
+  author={Smirnov, Nikolai V},
+  journal={Bull. Math. Univ. Moscou},
+  volume={2},
+  number={2},
+  pages={3--14},
+  year={1939}
+}
+
